--- a/snowy-plugin/pom.xml
+++ b/snowy-plugin/pom.xml
@@ -39,6 +39,9 @@
 
         <!-- 模拟器插件 -->
         <module>snowy-plugin-mocker</module>
+
+        <!-- 验证功能插件 -->
+        <module>snowy-plugin-a</module>
     </modules>
 
 </project>
