--- a/snowy-server/snowy-nacos-app/src/main/resources/application.properties
+++ b/snowy-server/snowy-nacos-app/src/main/resources/application.properties
@@ -20,7 +20,7 @@ server.servlet.contextPath=/nacos
 ### Include message field
 server.error.include-message=ALWAYS
 ### Default web server port:
-server.port=8848
+server.port=18848
 
 #*************** Network Related Configurations ***************#
 ### If prefer hostname over ip for Nacos server addresses in cluster.conf:
@@ -40,9 +40,9 @@ spring.sql.init.platform=mysql
 db.num=1
 
 ### Connect URL of DB:
-db.url.0=jdbc:mysql://127.0.0.1:3306/snowy-nacos-app-open?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+db.url.0=jdbc:mysql://127.0.0.1:53306/snowy-nacos-app?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
 db.user=root
-db.password=123456
+db.password=Abc131419..
 
 ### the maximum retry times for push
 nacos.config.push.maxRetryTime=50
