feat: 新增A应用启动组件及相关功能实现
新增A应用启动组件snowy-a-app，包含以下功能：
1. 添加A应用启动类SnowyAApp及基础配置
2. 实现全局异常处理、权限认证等核心功能
3. 新增示例API接口及DTO定义
4. 添加Feign客户端调用支持
5. 完善日志配置和文档说明
6. 更新pom.xml依赖配置

新增开发规范文档，详细说明项目结构和插件架构设计

--- a/snowy-modules/pom.xml
+++ b/snowy-modules/pom.xml
@@ -21,6 +21,9 @@
 
         <!-- 业务应用启动组件 -->
         <module>snowy-biz-app</module>
+
+        <!-- A应用启动组件 -->
+        <module>snowy-a-app</module>
     </modules>
 
 </project>
